Try using style-loader/useable
Doesn't work because the loaded styles aren't found somewhere along the
line.

 ERROR  Failed to compile with 2 errors

These relative modules were not found:

* ./css/light.useable.css in ./node_modules/cache-loader/dist/cjs.js??ref--0-0!./node_modules/vue-loader/lib??vue-loader-options!./src/App.vue?vue&type=script&lang=js&
* ./css/dark.useable.css in ./node_modules/cache-loader/dist/cjs.js??ref--0-0!./node_modules/vue-loader/lib??vue-loader-options!./src/App.vue?vue&type=script&lang=js&

pls halp

--- a/src/css/light.useable.css
+++ b/src/css/light.useable.css
@@ -1,4 +1,4 @@
-@import "./semantic.min.css"
+@import "~semantic-ui-css/semantic.min.css";
 
 /* Otherwise background is transparent */
 .ui.definition.table thead:not(.full-width) th:first-child {
