--- a/src/css/dark.useable.css
+++ b/src/css/dark.useable.css
@@ -1,4 +1,4 @@
-@import "./semantic.cyborg.min.css"
+@import "./semantic.cyborg.min.css";
 
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin);
 
