Use separate page for light theme and make dark the default
Previously, icon fonts weren't included by webpack because I added the
required stylesheets manuall in the html and then modified the html
header to load the other theme respectively.

I tried several other ways to get hot theme switching with Vue until I
eventually gave up and settled for this "new page" approach, which works
nicely. For a page switch, that is.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,14 +1,12 @@
-@import "./semantic.cyborg.min.css"
+@import "./semantic.cyborg.min.css";
 
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin);
 
 /* Some overrides to fix "bad" styling */
-:root {
+body {
   --bg: hsl(0, 0%, 7%);
   --form-bg: hsl(0, 0%, 9%);
-}
 
-body {
   font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
   background: var(--bg);
 }
