--- a/src/css/light.scss
+++ b/src/css/light.scss
@@ -1,6 +1,7 @@
-@import "./semantic.min.css"
+@import "./semantic.min.css";
+// @import 'semantic-ui-css/semantic.min.css';
 
 /* Otherwise background is transparent */
 .ui.definition.table thead:not(.full-width) th:first-child {
-  background: white !important
+background: white !important
 }
