--- a/src/css/light.scss
+++ b/src/css/light.scss
@@ -1,7 +1,8 @@
 @import "./semantic.min.css";
 // @import 'semantic-ui-css/semantic.min.css';
+@import "./common";
 
 /* Otherwise background is transparent */
 .ui.definition.table thead:not(.full-width) th:first-child {
-background: white !important
+  background: white !important
 }
