--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -21,6 +21,11 @@ body {
   box-shadow: none;
 }
 
+.ui.selectable.table tbody tr:hover, .ui.table tbody tr td.selectable:hover {
+    background: hsla(0, 0%, 45%, 0.05) !important;
+    color: hsl(0, 0%, 100%) !important;
+}
+
 .ui.table td.positive, .ui.table tr.positive {
   background: hsl(80, 100%, 15%) !important;
 }
@@ -40,4 +45,8 @@ body {
 .ui.form input[type=tel], .ui.form input[type=text],
 .ui.form input[type=time], .ui.form input[type=url] {
   background: var(--form-bg);
+}
+
+.ui.selection.dropdown .menu > .item {
+  border-top: 1px solid hsl(0, 0%, 35%);
 }
